# AI-log-filter-Training

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  results.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  security_vulnerability.md
.github/workflows/: cd.yaml  ci.yaml  load-test.yaml  security.yml  slsa.yml
.opencode/agent/: agent-organizer.md  ai-engineer.md  context-manager.md  data-analyst.md  data-engineer.md  data-researcher.md  data-scientist.md  database-optimizer.md  debugger.md  devops-incident-responder.md  error-coordinator.md  incident-responder.md  it-ops-orchestrator.md  knowledge-synthesizer.md  llm-architect.md  machine-learning-engineer.md  ml-engineer.md  mlops-engineer.md  multi-agent-coordinator.md  network-engineer.md  nlp-engineer.md  performance-engineer.md  performance-monitor.md  postgres-pro.md  prompt-engineer.md  research-analyst.md  rust-engineer.md  security-auditor.md  security-engineer.md  task-distributor.md  workflow-orchestrator.md
configs/: config.yaml  model_config.yaml  production.yaml  prometheus.yml  rules.yaml
data/labeled/: test.csv  train.csv
data/samples/: README.md  cef_logs.txt  leef_logs.txt  sample_logs.json
deploy/kubernetes/: deployment.yaml
docs/: API.md  README.md  TROUBLESHOOTING.md
docs/architecture/: PRODUCTION_ARCHITECTURE.md  PRODUCTION_ARCHITECTURE_ENHANCED.md  PRODUCTION_ARCHITECTURE_VNEXT.md
docs/assessment/: ASSESSMENT_SCORECARD.md
docs/guides/: BRANCH_PROTECTION.md
docs/meta/: DOCUMENTATION_UPDATES.md  README.md
docs/performance/: ONNX_MIGRATION_GUIDE.md  ONNX_ONLY_MODE.md  ONNX_QUICK_START.md  ONNX_RESOURCES.md  ONNX_VS_JOBLIB_COMPARISON.md  README.md  anomaly_techniques_comparison.md
docs/presentation/: AI-Log-Filter-Executive-ROI.pptx  build_executive_roi_deck.py
docs/reference/: API.md  README.md  TROUBLESHOOTING.md
docs/releases/: README.md  WHATS_NEW_V3.1.md
docs/runbooks/: INCIDENT-RESPONSE.md  OPERATION_RUNBOOK.md
docs/tracking/: COST_TRACKING.md  COST_TRACKING_QUICK_START.md  DOCKER_SETUP_UPDATE.md
docs/training/: SOC_TRAINING_GUIDE.md
examples/: onnx_only_example.py
mlruns/409251724105704757/: meta.yaml
mlruns/409251724105704757/8fbf229c561a4852bc3f4e33dc544440/: meta.yaml
mlruns/409251724105704757/9c8e07e40a9d4863ba99961acab57c57/: meta.yaml
models/: latest
models/run_20260125_231106/anomaly_detector/: model.joblib
models/run_20260125_231106/tfidf_xgboost/: model.joblib
models/run_20260218_024615/anomaly_detector/: model.onnx  scaler.onnx
models/run_20260218_024615/tfidf_xgboost/: labels.json  model.onnx  vectorizer.onnx
models/run_20260218_024715/anomaly_detector/: config.json  model.onnx  scaler.onnx
models/run_20260218_024715/tfidf_xgboost/: model.onnx  vectorizer.onnx
models/run_20260218_024914/anomaly_detector/: model.onnx  scaler.onnx
models/run_20260218_024914/tfidf_xgboost/: config.json  model.onnx  vectorizer.onnx
models/run_20260218_025103/anomaly_detector/: model.onnx  scaler.onnx
models/run_20260218_025103/tfidf_xgboost/: model.onnx  vectorizer.onnx
models/test_run/: latest
models/v2/: model_info.json  training_results.json
models/v2/tfidf_xgboost/: model.joblib
models/v3/: training_results.json
models/v3/anomaly_detector/: model.joblib
models/v3/onnx/: MIGRATION_GUIDE.md  anomaly_detector.onnx  model_info.json  (+3 more)
reports/: BENCHMARK_SUMMARY.md
reports/chaos_test/: chaos_test_20260125_161811.json  chaos_test_20260125_161846.json  chaos_test_20260218_073006.json  chaos_test_20260222_093649.json
reports/load_test/: load_test_20260125_161513.json  load_test_20260125_162617.json  load_test_20260125_162928.json  load_test_20260218_072903.json  load_test_20260222_093555.json  load_test_steps_20260125_162617.csv  load_test_steps_20260125_162928.csv  load_test_steps_20260218_072903.csv  load_test_steps_20260222_093555.csv
reports/shadow_validation/: false_negatives_20260125_162107.csv  false_negatives_20260125_200707.csv  false_negatives_20260218_075134.csv  validation_20260125_162107.json  validation_20260125_201716.json  validation_20260218_072918.json  validation_20260218_072932.json  validation_20260218_073100.json  validation_20260218_074044.json  validation_20260218_074120.json  validation_20260218_074532.json  validation_20260218_075018.json  validation_20260218_075134.json
scripts/: chaos_test.py  cleanup.sh  convert_models_to_onnx.py  cost_report.py  evaluate.py  generate_sample_data.py  integration_tests.py  load_test.py  shadow_validation.py  train.py  training_pipeline.py  validate_models.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py  health.py  rate_limiter.py
src/domain/: entities.py  factories.py  ports.py
src/ingestion/: __init__.py  kafka_consumer.py
src/integration/: __init__.py
src/models/: __init__.py  anomaly_detector.py  base.py  base_ensemble.py  classification_result.py  ensemble.py  onnx_converter.py  onnx_ensemble.py  onnx_runtime.py  rule_based.py  safe_ensemble.py  tfidf_classifier.py
src/monitoring/: __init__.py  cost_tracker.py  metrics.py  production_metrics.py  spc_detector.py
src/preprocessing/: __init__.py  compliance_gate.py  log_parser.py
src/routing/: __init__.py  router.py
src/utils/: __init__.py  circuit_breaker.py  config.py  experiment_tracking.py  logging.py  metrics.py  onnx_config.py  text_preprocessing.py
src/validation/: __init__.py  qradar_correlation.py  shadow_mode.py
tests/: config_test.py  conftest.py  fixtures.py  test_api.py  test_circuit_breaker.py  test_classifiers.py  test_compliance_gate.py  test_health_endpoints.py  test_kafka_integration.py  test_log_parser.py  test_production_metrics.py  test_rate_limiter.py  test_safe_ensemble.py  test_shadow_mode.py
(+64 files in other folders)
