[project]
name = "ai-log-filter"
version = "1.0.0"
description = "AI-Driven Log Filtering for SIEM Efficiency - Intelligent ML-based log classification for IBM QRadar"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AI Log Filter Contributors" }
]
keywords = ["siem", "log-filtering", "machine-learning", "qradar", "security", "xgboost"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
requires-python = ">=3.14"
dependencies = [
  "confluent-kafka>=2.13.0",
  "fastapi>=0.128.0",
  "fastparquet>=2025.12.0",
  "httpx>=0.28.1",
  "numpy>=2.4.1",
  "pandas>=2.3.3",
  "prometheus-client>=0.24.1",
  "pyarrow>=23.0.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
  "ruff>=0.14.13",
  "scikit-learn>=1.8.0",
  "slowapi>=0.1.9",
  "structlog>=25.5.0",
  "tqdm>=4.67.1",
  "uvicorn>=0.40.0",
  "xgboost>=3.1.3",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=7.1.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
]
