[project]
name = "ai-log-filter"
version = "1.0.0"
description = "AI-Driven Log Filtering for SIEM Efficiency - Intelligent ML-based log classification for IBM QRadar"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "AI Log Filter Contributors" }]
keywords = [
  "log-filtering",
  "machine-learning",
  "qradar",
  "security",
  "siem",
  "xgboost",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: System :: Logging",
]
dependencies = [
  # Kafka Integration
  "confluent-kafka>=2.13.0",
  # Web Framework
  "fastapi>=0.128.0",
  "fastparquet>=2025.12.0",
  # HTTP Client
  "httpx>=0.28.1",
  # Data Processing
  "joblib>=1.5.3",
  "numpy>=2.4.1",
  "pandas>=2.3.3",
  # Monitoring & Logging
  "prometheus-client>=0.24.1",
  "pyarrow>=23.0.0",
  # Configuration & Validation
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
  # Machine Learning
  "scikit-learn>=1.8.0",
  "slowapi>=0.1.9",
  "structlog>=25.5.0",
  "tqdm>=4.67.1",
  "uvicorn>=0.40.0",
  "xgboost>=3.1.3",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=7.1.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.13",
]

# =============================================================================
# RUFF CONFIGURATION
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "*.egg-info",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # Line too long (handled by formatter)
  "B008",  # Do not perform function calls in argument defaults
  "B904",  # Within except clause, raise with raise ... from err
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================

[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning:slowapi.*:",
  "ignore::pydantic.PydanticDeprecatedSince20",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
